--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "static-site",
+  "name": "Sophie-Ebsworth-README-Generator",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
