--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Sophie-Ebsworth-README-Generator",
+  "name": "readme-generator",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
